--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <img class="profile__avatar" src="./images/Жак-Ив Кусто.jpg" alt="Жак-Ив Кусто">
       <div class="profile__info"> 
         <h1 class="profile__nickname">Жак-Ив Кусто</h1>
-        <button class="profile__edit-button"><img src="./images/Edit Button.svg" alt="Редактировать профиль"></button>
+        <button class="profile__edit-button"></button>
         <p class="profile__profession">Исследователь океана</p>
       </div>
-      <button class="profile__add-button"><img src="./images/Add Button.svg" alt="кнопка добавления"></button>
+      <button class="profile__add-button"></button>
     </section>
 
     <section class="popup">
@@ -40,33 +40,33 @@
 
     <section class="elements">
       <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="">
+        <img class="element__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм">
         <h2 class="element__text">Карачаевск</h2>
         <button class="element__like-button"></button>
       </article>
       <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="">
+        <img class="element__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Закат">
         <h2 class="element__text">Гора Эльбрус</h2>
         <button class="element__like-button"></button>
       </article>
       <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="">
-        <h2 class="element__text">Домбай</button></h2>
-        <button class="element__like-button">
+        <img class="element__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Гора">
+        <h2 class="element__text">Домбай</h2>
+        <button class="element__like-button"></button>
       </article>
 
       <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="">
+        <img class="element__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Закат">
         <h2 class="element__text">Гора Эльбрус</h2>
         <button class="element__like-button"></button>
       </article>
       <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="">
+        <img class="element__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Гора">
         <h2 class="element__text">Домбай</h2>
           <button class="element__like-button"></button>
       </article>
       <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="">
+        <img class="element__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм">
         <h2 class="element__text">Карачаево-Черкессия</h2>
         <button class="element__like-button"></button>
       </article>
