работа над ошипками 1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="popup__container">
         <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
         <h3 class="popup__text">Редактировать профиль</h3>
-        <form class="popup__form" name="editProfile" action="">
+        <form class="popup__form" name="editProfile">
           <input class="popup__input popup__input_nickname" type="text" name="nickname" value="">
           <input class="popup__input popup__input_profession" type="text" name="profession" value="">
           <button class="popup__save-button" type="submit">Сохранить</button>
