--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button class="profile__add-button" type="button"></button>
     </section>
 
-    <div class="popup">
+    <div class="popup popup_type_profile">
       <div class="popup__container">
         <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
         <h3 class="popup__text">Редактировать профиль</h3>
@@ -39,44 +39,37 @@
       </div>
     </div>
 
-    <section class="elements">
-      <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм">
-        <h2 class="element__text">Карачаевск</h2>
-        <button class="element__like-button" type="button" aria-label="Нравится"></button>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Закат">
-        <h2 class="element__text">Гора Эльбрус</h2>
-        <button class="element__like-button" type="button" aria-label="Нравится"></button>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Гора">
-        <h2 class="element__text">Домбай</h2>
-        <button class="element__like-button" type="button" aria-label="Нравится"></button>
-      </article>
+    <div class="popup popup_type_mesto">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+        <h3 class="popup__text">Новое место</h3>
+        <form class="popup__form" name="editProfile">
+          <input class="popup__input popup__input_type_title" type="text" name="title" id="title" placeholder="Название" value="">
+          <input class="popup__input popup__input_type_Link" type="url" name="Link" id="Link" placeholder="Ссылка на картинку" value="">
+          <button class="popup__save-button" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
 
-      <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Закат">
-        <h2 class="element__text">Гора Эльбрус</h2>
-        <button class="element__like-button" type="button" aria-label="Нравится"></button>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Гора">
-        <h2 class="element__text">Домбай</h2>
-          <button class="element__like-button" type="button" aria-label="Нравится"></button>
-      </article>
-      <article class="element">
-        <img class="element__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм">
-        <h2 class="element__text">Карачаево-Черкессия</h2>
-        <button class="element__like-button" type="button" aria-label="Нравится"></button>
-      </article>
+    <section class="elements">
+      
     </section>
 
   </main>
 
 <footer class="footer"><p class="footer__copyright">© 2020 Mesto Russia</p></footer>
 
-  <script src="./script/script.js"></script>
+<template id="element-template">
+  <article class="element">
+    <img class="element__image" src="#" alt="">
+    <h2 class="element__text"></h2>
+    <button class="element__like-button" type="button" aria-label="Нравится"></button>
+  </article>
+</template>
+
+<script src="./script/script.js"></script>
+<script src="./script/cards.js"></script>
+<!-- <script src="./script/popupProfile.js"></script>
+<script src="./script/popupMesto.js"></script> -->
 </body>
 </html>
