--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 <template id="element-template">
   <article class="element">
+    <button class="element__delete-button"></button>
     <img class="element__image" src="#" alt="">
     <h2 class="element__text"></h2>
     <button class="element__like-button" type="button" aria-label="Нравится"></button>
