--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
       </div>
     </div>
 
+    <div class="popup popup_type_image">
+      <div class="popup__container-image">
+        <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+        <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/ivanovo.jpg" alt="">
+      </div>
+   
+    </div>
+
     <section class="elements">
       
     </section>
