--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   </main>
 
-  <div class="popup popup_type_profile">
+  <div class="popup popup_type_profile popup_closed" >
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Редактировать профиль</h3>
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <div class="popup popup_type_mesto">
+  <div class="popup popup_type_mesto popup_closed">
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Новое место</h3>
@@ -59,12 +59,12 @@
     </div>
   </div>
 
-  <div class="popup popup_type_image">
+  <div class="popup popup_type_image popup_closed">
     <div class="popup__container-image">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
-      <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/ivanovo.jpg" alt="">
-    </div>
-
+      <img class="popup__image"  src="" alt="">
+    <h3 class="popup__image-text">пппп</h3>
+  </div>
   </div>
 
 <footer class="footer"><p class="footer__copyright">© 2020 Mesto Russia</p></footer>
