--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   </main>
 
-  <div class="popup popup_type_profile popup_closed" >
+  <div class="popup popup_type_profile" >
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Редактировать профиль</h3>
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <div class="popup popup_type_mesto popup_closed">
+  <div class="popup popup_type_mesto">
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Новое место</h3>
@@ -59,7 +59,7 @@
     </div>
   </div>
 
-  <div class="popup popup_type_image popup_closed">
+  <div class="popup popup_type_image">
     <div class="popup__container-image">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <img class="popup__image"  src="" alt="">
