--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <div class="popup popup_type_image">
     <div class="popup__container-image">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
-      <img class="popup__image"  src="" alt="">
-    <h3 class="popup__image-text">пппп</h3>
+      <img class="popup__image"  src="#" alt="">
+    <h3 class="popup__image-text"></h3>
   </div>
   </div>
 
