--- a/index.html
+++ b/index.html
@@ -35,14 +35,23 @@
 
   </main>
 
-  <div class="popup popup_type_profile" >
+  <div class="popup popup_type_profile">
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Редактировать профиль</h3>
-      <form class="popup__form" name="editProfile">
-        <input class="popup__input popup__input_type_nickname" type="text" name="nickname" value="">
-        <input class="popup__input popup__input_type_profession" type="text" name="profession" value="">
-        <button class="popup__save-button" type="submit">Сохранить</button>
+
+      <form class="form" name="editProfile">
+        <label class="form__field">
+          <input class="form__input" id="nickname-input" type="text" name="nickname" value="" required minlength="2" maxlength="40" placeholder="Название">
+          <span class="form__input-error nickname-input-error">fgh</span>
+        </label>
+        
+        <label class="form__field">
+          <input class="form__input" id="profession-input" type="text" name="profession" value="" required minlength="2" maxlength="200" placeholder="Ссылка на картинку">
+          <span class="form__input-error profession-input-error">dg</span>
+        </label>
+
+        <button class="form__save-button" type="submit">Сохранить</button>
       </form>
     </div>
   </div>
@@ -51,10 +60,19 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Новое место</h3>
-      <form class="popup__form" name="editProfile">
-        <input class="popup__input popup__input_type_title" type="text" name="title" id="title" placeholder="Название" value="">
-        <input class="popup__input popup__input_type_Link" type="url" name="Link" id="Link" placeholder="Ссылка на картинку" value="">
-        <button class="popup__save-button" type="submit">Создать</button>
+
+      <form class="form" name="addMesto">
+        <label class="form__field">
+          <input class="form__input" id="title-input" type="text" name="title" placeholder="Название" value="" required minlength="2" maxlength="30">
+          <span class="form__input-error title-input-error"></span>
+        </label>
+        
+        <label class="form__field">
+          <input class="form__input" id="link-input" type="url" name="link" placeholder="Ссылка на картинку" value="" required>
+          <span class="form__input-error link-input-error"></span>
+        </label>
+
+        <button class="form__save-button" type="submit">Создать</button>
       </form>
     </div>
   </div>
@@ -80,5 +98,6 @@
 
 <script src="./script/cards.js"></script>
 <script src="./script/index.js"></script>
+<script src="./script/validator.js"></script>
 </body>
 </html>
