--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
   </article>
 </template>
 
-<script src="./script/cards.js"></script>
-<script src="./script/index.js"></script>
+<script type="module" src="./script/index.js"></script>
 <script src="./script/validator.js"></script>
 </body>
 </html>
