--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
 </template>
 
 <script type="module" src="./script/index.js"></script>
-<script src="./script/validator.js"></script>
+<!-- <script src="./script/validator.js"></script> -->
 </body>
 </html>
