работа над ошипками

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Редактировать профиль</h3>
 
-      <form class="form" name="editProfile">
+      <form class="form" name="changeProfile">
         <label class="form__field">
           <input class="form__input" id="nickname-input" type="text" name="nickname" value="" required minlength="2" maxlength="40" placeholder="Название">
           <span class="form__input-error nickname-input-error">fgh</span>
