--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,6 @@
   </article>
 </template>
 
-<script type="module" src="./script/index.js"></script>
+<script type="module" src="../src/pages/index.js"></script>
 </body>
 </html>
