--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,10 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
       <h3 class="popup__text">Вы уверены?</h3>
-      <button class="form__save-button" type="submit">Да</button>
+      <form class="form" name="deleteCard">
+        <button class="form__save-button" type="submit">Да</button>
+      </form>
+      
     </div>
   </div>
 
