Работа над ошибками 3

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
         <h2 class="element__text"></h2>
         <div class="element__like">
           <button class="element__like-button" type="button" aria-label="Нравится"></button>
-          <p class="element__likes-nombre">0</p>
+          <p class="element__likes-number">0</p>
         </div>
       </article>
     </template>
